--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bluebird": "^2.9.34",
     "captains-log": "^0.11.11",
+    "commander": "^2.8.1",
     "jsforce": "^1.5.0",
     "lodash": "^3.10.1"
   }
