--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sflog",
-  "version": "0.0.6",
-  "description": "sflog: tail log for Force.com",
+  "version": "0.0.7",
+  "description": "sflog: pulling log for Force.com",
   "main": "sflog.js",
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
     "force.com",
     "force",
     "tail",
+    "pulling",
     "log"
   ],
   "author": {
